# regendary

./: .env.example  .gitignore  README.md  package-lock.json  package.json  server.js
fhe/: .gitignore  Cargo.toml  Dockerfile  README.md
fhe/src/: main.rs
fhe/src/fhe/: key_gen.rs  mod.rs
fhe/src/handlers/: mod.rs  pred.rs
predictionMarket/: README.md  debug-blueprint.js  package-lock.json  package.json  test-blueprint-method.js  test-mnemonic.js  test-v5.js
predictionMarket/contracts/: market.fc
predictionMarket/scripts/: claimWinnings.ts  deployMarket.ts  getMarketInfo.ts  placeBet.ts  resolveMarket.ts
predictionMarket/tests/: Market.spec.ts
predictionMarket/wrappers/: Market.compile.ts  Market.ts
public/: index.html
