[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tfhe = { version = "0.11.1", features = ["boolean", "shortint", "integer"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }